Hotel booking Commit 2

--- a/Hotel_Booking_Analysis_Capstone_Project.ipynb
+++ b/Hotel_Booking_Analysis_Capstone_Project.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "Hotel Booking Analysis - Capstone Project.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -50,13 +51,59 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dByMsuzT8Tnw"
-      },
+      "cell_type": "markdown",
       "source": [
-        ""
+        "# **Understanding the Hotel Booking**\n",
+        "\n",
+        "firstly, we have to know the some parameters like the main few things I will usually consider include prices per night, distance of hotel from attractions and restaurants, availability of free breakfasts, scenery in hotel room, cleaniness of hotel room and of course, availability of free wifi. In this dataset, we ae able to know different types of bookings (i.e type of hotel, duration of stay, types of visitors, types of booking, etc)."
       ],
+      "metadata": {
+        "id": "X41bPAlCiYDh"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Index:**\n",
+        "\n",
+        "**1. Importing all the important libraries.**\n",
+        "\n",
+        "**2. Importing data from the local drive.**\n",
+        "\n",
+        "**3. Basic Examination.**\n",
+        "\n",
+        "**4. Data Cleansing Techniques To Get Rid Of Unwanted Data and Outliers.**\n",
+        "\n",
+        "**5. Data Visualization**\n",
+        "\n",
+        "**6. Conclusion.**"
+      ],
+      "metadata": {
+        "id": "j0Jxrp_9jL1z"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **1. Importing all the important libraries.**\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "YSBWRCEjjvCw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline\n",
+        "import seaborn as sns"
+      ],
+      "metadata": {
+        "id": "-HliIxCLkGQU"
+      },
       "execution_count": null,
       "outputs": []
     }
