Hotel Booking Commit 4

--- a/Hotel_Booking_Analysis_Capstone_Project.ipynb
+++ b/Hotel_Booking_Analysis_Capstone_Project.ipynb
@@ -110,7 +110,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **2. Importing data from the local drive.**"
+        "# **2. Importing data from the Google drive.**"
       ],
       "metadata": {
         "id": "x-54jeY0n9gN"
